# shogilib

./: .gitignore  .python-version  Check_paper.ipynb  README.md  pyproject.toml
research/: 3_fen.py  RN100M_10000.txt  RN10K.txt  check_NG.txt  check_OK.txt  check_flip_identical.py  check_piece.py  check_prev.py  check_reach.py  check_reach_heapcount.py  count_fenfile.py  do_par.sh  estimate.py  fen_to_eval_cmd.py  flipH_NG.txt  generate_random1M.py  is_reachable_rank.py  kk.py  legal_illegal.py  opking_check.py  piece_OK.txt  prev_NG.txt  prev_OK.txt  prev_check.py  random_number_100M.py  random_number_1M.py  rank.py  rank_all.py  rank_all_pseudo_positions.py  rank_to_fen.py  reach_NG_nocheck.py  reach_OK.txt  reach_partial.py  test_check_reach.py  test_pos2rank.py  test_rank.py  test_rank2pos.py  test_rank_all.py  test_rank_to_fen.py  view_random_number.py  (+1 more)
shogilib/: __init__.py  position.py  show_images.py
src/research/: 3_fen.py  astar.py  check_flip_identical.py  check_king.py  check_piece.py  check_prev.py  check_reach.py  check_reach_heapcount.py  count_fenfile.py  estimate.py  fen_to_eval_cmd.py  is_reachable_rank.py  kk.py  paths.py  random_number_10K.py  random_number_500M.py  rank.py  rank_all.py  rank_to_fen.py  reach_NG_nocheck.py  reach_partial.py  view_random_number.py  visualize_fen.py
tests/: __init__.py  shogilib  test_check_reach.py  test_images.py  test_incheck.py  test_move.py  test_piece.py  test_player.py  test_plm.py  test_pos2rank.py  test_position.py  test_previous.py  test_ptype.py  test_rank.py  test_rank2pos.py  test_rank_all.py
(+3 files in other folders)
